IE Fixes & searchSelect fix
Scrollbar, loading indicator, fonts

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,9 +1,9 @@
-@font-face {
+/*@font-face {
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 400;
   src: local('Open Sans'), local('OpenSans'), url(/css/OpenSans.ttf) format('truetype');
-}
+}*/
 
 body {width: 100%; 
 	/*height: 100%; */
@@ -49,8 +49,10 @@ h1 {margin-top: 1em; margin-bottom: 0;}
 	font-size: 11px;}
 
 #CourseList {min-width: 110px; max-width: 300px; text-align: left; overflow-y: scroll;}
-#CourseList li {padding: 0 2em 0 2em;
-	-webkit-transition: text-indent .15s ease-in-out; transition: text-indent .15s ease-in-out;}
+#CourseList li {
+	padding: 0 2em 0 2em;
+/*	-webkit-transition: text-indent .15s ease-in-out; transition: text-indent .15s ease-in-out;*/
+	text-align: center;}
 /*#CourseList li:hover {text-indent: 0.5em;}*/
 #Sections, #SectionInfo {width: 300px; text-align: left; overflow-y: scroll; box-sizing: border-box; padding-left: 0.5em; padding-right: 0.5em;}
 #Sections {height: 35%;}
@@ -111,6 +113,17 @@ input[type="text"] {
 ::-webkit-scrollbar-track {background: white;} 
 /* Handle */
 ::-webkit-scrollbar-thumb {background: #95a5a6; border-radius: 1px;}
+/* For IE :P */
+body{
+  scrollbar-base-color: #C0C0C0;
+  scrollbar-base-color: #C0C0C0;
+  scrollbar-3dlight-color: #C0C0C0;
+  scrollbar-highlight-color: #C0C0C0;
+  scrollbar-track-color: white;
+  scrollbar-arrow-color: #C0C0C0;
+  scrollbar-shadow-color: #C0C0C0;
+  scrollbar-dark-shadow-color: #C0C0C0;
+}
 
 .loader{
   height: 30px;
@@ -121,4 +134,5 @@ input[type="text"] {
   display: inline-block;
   vertical-align: middle;
 }
-.fa {font-size: 14px; color: #01256e}
+.fa {font-size: 14px; color: #01256e;}
+.fa-star, .fa-star-o {float:right;}
